--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background: #f9f9f9;
+}
+
+html{
+  background-size: cover;
+  min-height: 100%;
 }
 
 code {
