--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,32 @@
   justify-content: space-around;
 }
 
+.icon::before {
+  display: none;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+.nextArrow{
+  font-family: "Font Awesome 5 Free";
+        font-weight: 400;
+        content: "\f1ea";
+
+}
+
 
 
 
 .image {
-  height: 350px;
-  width: 350px;
+  height: 35vw;
+  width: 35vw;
   font-size: 25px;
   background: whitesmoke;
-  margin: 10px;
+  margin: 1vw;
   display: inline-block;
-  line-height: 100px; 
+  line-height: 10vw; 
 }
 
 
@@ -109,11 +124,12 @@ card3{
 }
 
 .name{
+  display:flex;
   font-family: "MarzoW00-Regular", fantasy;
   letter-spacing: .08em;
-  font-size: 80px;
+  font-size: 7vw;
   color: whitesmoke;
-  padding-left: 50px;
+  padding-left: 40px;
 }
 
 .Site{
