--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
   background: #f9f9f9;
 }
 
+::-webkit-scrollbar{
+  width:0px;
+  background: transparent;
+}
+
 html{
   background-size: cover;
   min-height: 100%;
