--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  background: #f9f9f9;
+  background: whitesmoke;
 }
 
 ::-webkit-scrollbar{
