--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,8 +1,31 @@
 .footer {
     background-color: #333;
     overflow: hidden;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
-    width: 100%;
-    display:flex;
+    width: 1vw;
+    /* display:flex; */
+    
+      position: absolute;
+      display:block;
+      align-content: center;
+      padding-left: 10px;
+     
   }
+
+  .iconSize{
+    size: 1vw;
+  }
+
+  .main2{
+    padding-left: 20px;
+    align-content: center;
+    overflow: hidden;
+    /* position: fixed; */
+    bottom: 0;
+    width: 1vw;
+    /* display:flex; */
+    
+      position: absolute;
+      display:block;
+}
